Issue 47 (#48)
* Alfresco JAVA Opts added

* Alfresco JAVA Opts added and set master branch

* Removed Nginx ecs